--- a/src/assets/scss/banner.scss
+++ b/src/assets/scss/banner.scss
@@ -7,6 +7,8 @@
       position: relative;
       height: 100px;
       width: inherit;
+      display: flex;
+      justify-content: space-around;
   
         .nav-logo {
           width: 62px;
