--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -31,6 +31,15 @@
     border: none;
   }
   
+  .icon, .iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+  
+  }
   @media (min-width:768px) {
       .el-aside{
           display: block;
