--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -86,6 +86,7 @@
           width: 251px;
           height: 112px;
           float: right;
+          text-align: center;
           border-left: 1px solid #e0e0e0;
   
           h2 {
