--- a/src/assets/scss/registered.scss
+++ b/src/assets/scss/registered.scss
@@ -50,7 +50,7 @@
       .layout-table {
         position: relative;
         width: inherit;
-  
+
         .regbox {
           width: 332px;
           padding: 30px 0;
@@ -58,6 +58,24 @@
           margin: 0 auto;
           font-size: 14px;
           position: relative;
+
+          .el-from-item {
+            margin: 0 auto;
+            width: 346px;
+            height: 48px;
+  
+  
+            .el-input {
+              width: 346px;
+              height: 48px;
+              padding: 13px 16px 13px 14px;
+              border: 1px solid #e0e0e0;
+            }
+  
+            &.last {
+              margin: 20px auto;
+            }
+          }
   
           h4 {
             width: inherit;
@@ -170,6 +188,7 @@
       margin-top: 20px;
       background: #f9f9f9;
       z-index: 4;
+      text-align: center;
   
       ul {
         width: inherit;
